--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ border: 2px #00aeff solid;
 
   <iframe width="1020" height="630" src="https://www.youtube.com/embed/yJPmBB8HkDw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <ul class="web_btn">
-    <li><a href="https://bokyeongkang.github.io/Portfolio/" class="c2">Home</a><li>
+    <li><a href="https://bokyeongkang.github.io/Portfolio/#portfolio-section" class="c2">Home</a><li>
   </ul>
 
 </body>
